test/org/midica/testfiles/failing/call-param-name-invalid.midica
INCLUDE inc/instruments.midica

FUNCTION test
	0 c /4
END
CALL test(a/=b)